# simple_game

./: AirplaneCabin.cpp  AirplaneCabin.h  AirplaneHanger.cpp  AirplaneHanger.h  AirplaneLuggageArea.cpp  AirplaneLuggageArea.h  CMakeLists.txt  Damages.h  Defense.cpp  Defense.h  Game.cpp  Game.h  LowerDeck.cpp  LowerDeck.h  Player.cpp  Player.h  README.md  Scene.cpp  Scene.h  Serializable.cpp  Serializable.h  Serializer.cpp  Serializer.h  Weapon.cpp  Weapon.h  main.cpp  serialization_test.cpp  serializer_concepts.h  utils.cpp  utils.hpp
